# FirstRugieLikeDankaise

./: .gitignore  CMakeLists.txt  InstallationLog.txt  README.md  branches.txt
.qwen/: settings.json
build-ninja/: CMakeCache.txt
build-pc/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  isaac.vcxproj  isaac.vcxproj.filters  isaac_clone.slnx
build-pc/isaac.dir/Release/: isaac.exe.recipe
build-pc/isaac.dir/Release/isaac.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-pc/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build-pc/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
build-pc/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
build-web/: .ninja_deps  .ninja_log  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  build.ninja  cmake_install.cmake
build-web/web/: index.html  index.js  isaac.html  isaac.js
build-web2/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  build_log.txt  cmake_install.cmake
build-web2/web/: index.html
cmake/: PatchSfmlString.cmake
data/: items.json  monsters.json
data/rooms/: templates.json
src/: Bomb.cpp  Bomb.h  Entity.h  Floor.cpp  Floor.h  Game.cpp  Game.h  Map.cpp  Map.h  Player.cpp  Player.h  Room.cpp  Room.h  Tear.cpp  Tear.h
src/items/: Item.h  ItemList.cpp  Pickup.h
src/monsters/: Boss.cpp  Boss.h  Fly.cpp  Fly.h  Knight.cpp  Knight.h  Leech.cpp  Leech.h  Monster.cpp  Monster.h  MonsterLoader.cpp  MonsterLoader.h  Spider.cpp  Spider.h
src/props/: Prop.h
src/rooms/: RoomCombatSystem.cpp  RoomCombatSystem.h  RoomContentBuilder.cpp  RoomContentBuilder.h  RoomObjectsSystem.cpp  RoomObjectsSystem.h  RoomRenderer.cpp  RoomRenderer.h  RoomTemplate.h  RoomTemplateLoader.cpp  RoomTemplateLoader.h  RoomVisualBuilder.cpp  RoomVisualBuilder.h
src/ui/: HUD.cpp  HUD.h
src/utils/: Collision.h  JsonParser.h  Random.h
web/: index.html
